--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,14 +124,13 @@ body {
 }
 
 .quiz-answer-btn:hover {
-  background-color: #1971c2;
-  box-shadow: 5px 5px 10px #212529;
+  box-shadow: 5px 5px 10px #1971c2;
   transform: translateY(-3px);
 }
 
 .quiz-answer-btn:active {
   transform: translateY(1px);
-  box-shadow: 2px 2px 10px #212529;
+  box-shadow: 2px 2px 10px #1971c2;
 }
 
 .slide-out-in {
@@ -146,4 +145,9 @@ body {
 .success-message {
   font-size: 4rem;
   color: #fff;
+  text-align: center;
+}
+
+.score {
+  color: #51cf66;
 }
