update: added readme file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* =================================== */
 /* DESIGN SYSTEM */
 /* =================================== */
@@ -32,20 +33,16 @@ Default: 1
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 
 */
-
 /* =================================== */
 /* FONTS */
 /* =================================== */
-
 @font-face {
   font-family: "";
   src: url();
 }
-
 /* =================================== */
 /* RESET STYLES */
 /* =================================== */
-
 *,
 *::after,
 *::before {
@@ -57,7 +54,6 @@ Default: 1
 /* ------------------------ */
 /* GENERAL STYLES */
 /* ------------------------ */
-
 html {
   /* 10px / 16px * 100% = 62,5% */
   /* Percentage of users browser font-size setting */
@@ -71,30 +67,25 @@ body {
   font-size: 1.6rem;
   box-sizing: border-box;
   overflow-x: hidden;
-  background: radial-gradient(
-    circle,
-    rgba(25, 113, 194, 1) 0%,
-    rgba(33, 37, 41, 1) 100%
-  );
+  background: radial-gradient(circle, rgb(25, 113, 194) 0%, rgb(33, 37, 41) 100%);
   height: 100vh;
 }
 
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
-
 .section-quiz {
   max-width: 144rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   margin: 0 auto;
+  height: 100%;
 }
 
 .quiz-image {
-  width: 80vh;
+  width: 50%;
   object-fit: contain;
   border: 5px solid #1971c2;
   border-radius: 0.8rem;
@@ -111,6 +102,7 @@ body {
   display: flex;
   justify-content: center;
   column-gap: 4rem;
+  padding-inline: 2%;
 }
 
 .quiz-answer-btn {
@@ -151,3 +143,5 @@ body {
 .score {
   color: #51cf66;
 }
+
+/*# sourceMappingURL=style.css.map */
